chore: Addressed the Copilot feedback.