@@ -18,6 +18,7 @@
  */
 package org.apache.plc4x.java.ads.tag;
 
+import org.apache.plc4x.java.ads.readwrite.AdsDataType;
 import org.apache.plc4x.java.api.exceptions.PlcInvalidTagException;
 import org.apache.plc4x.java.api.model.ArrayInfo;
 import org.apache.plc4x.java.api.types.PlcValueType;
@@ -58,7 +59,18 @@ public class DirectAdsTag implements AdsTag {
 
     private final int numberOfElements;
 
+    /**
+     * Whether the address wrote the selection as a range. A one-element range is still a range,
+     * and the count cannot say which was written.
+     */
+    private final boolean explicitRange;
+
     public DirectAdsTag(long indexGroup, long indexOffset, String adsDataTypeName, Integer numberOfElements) {
+        this(indexGroup, indexOffset, adsDataTypeName, numberOfElements, (numberOfElements != null) && (numberOfElements > 1));
+    }
+
+    public DirectAdsTag(long indexGroup, long indexOffset, String adsDataTypeName, Integer numberOfElements, boolean explicitRange) {
+        this.explicitRange = explicitRange;
         this.indexGroup = checkUint32("indexGroup", indexGroup);
         this.indexOffset = checkUint32("indexOffset", indexOffset);
         this.adsDataTypeName = Objects.requireNonNull(adsDataTypeName);
@@ -118,11 +130,12 @@ public class DirectAdsTag implements AdsTag {
     protected static int[] selectionOf(Matcher matcher, String address) {
         String expression = matcher.group("array");
         if (expression == null) {
-            return new int[]{0, 1};
+            return new int[]{0, 1, 0};
         }
         ArrayInfo dimension = ArrayNotationParser
-            .parse(expression, address, AddressConstraints.SINGLE_DIMENSION).get(0);
-        return new int[]{dimension.getLowerBound() - dimension.getBase(), dimension.getSize()};
+            .parse(expression, address, AddressConstraints.SINGLE_DIMENSION).getFirst();
+        return new int[]{dimension.getLowerBound() - dimension.getBase(), dimension.getSize(),
+            dimension.isRange() ? 1 : 0};
     }
 
     public static DirectAdsTag of(String address) {
@@ -144,10 +157,35 @@ public class DirectAdsTag implements AdsTag {
         String adsDataTypeString = matcher.group("adsDataType");
 
         int[] selection = selectionOf(matcher, address);
-        indexOffset += selection[0];
+        // An index offset is a byte offset; the selection counts elements. They are the same
+        // number only for a one-byte type, so 0x4020/0[3]:DINT would otherwise advance three
+        // bytes and read from inside the first element.
+        indexOffset += (long) selection[0] * bytesPerElement(adsDataTypeString, selection[0], address);
         Integer numberOfElements = selection[1];
 
-        return new DirectAdsTag(indexGroup, indexOffset, adsDataTypeString, numberOfElements);
+        return new DirectAdsTag(indexGroup, indexOffset, adsDataTypeString, numberOfElements,
+            selection[2] == 1);
+    }
+
+    /**
+     * The storage size of one element of the named type.
+     *
+     * <p>The device's data-type table is not available while an address is being parsed, so only
+     * the types ADS defines itself can be measured here. A selection on anything else cannot be
+     * placed, and is refused rather than silently applied at the wrong offset - the offset is only
+     * needed when something was selected, so an address without a selection is unaffected.</p>
+     */
+    private static int bytesPerElement(String typeName, int offset, String address) {
+        try {
+            return AdsDataType.valueOf(typeName).getNumBytes();
+        } catch (IllegalArgumentException e) {
+            if (offset == 0) {
+                return 1;
+            }
+            throw new PlcInvalidTagException("Cannot place a selection in '" + address + "': the size"
+                + " of type '" + typeName + "' is only known to the device, so the element's offset"
+                + " cannot be computed here. Address the element directly instead.");
+        }
     }
 
     public static boolean matches(String address) {
@@ -172,7 +210,9 @@ public class DirectAdsTag implements AdsTag {
 
     @Override
     public String getAddressString() {
-        return String.format("0x%d/%d%s:%s", getIndexGroup(), getIndexOffset(),
+        // "0x%d" printed the group's decimal digits behind a hex prefix, so group 16416 came back
+        // as 0x16416 - which re-parses as 91158, a different address entirely.
+        return String.format("0x%X/%d%s:%s", getIndexGroup(), getIndexOffset(),
             ArrayNotationParser.render(getArrayInfo()), getPlcDataType());
     }
 
@@ -187,8 +227,9 @@ public class DirectAdsTag implements AdsTag {
 
     @Override
     public List<ArrayInfo> getArrayInfo() {
-        if(getNumberOfElements() != 1) {
-            return Collections.singletonList(new DefaultArrayInfo(0, getNumberOfElements() - 1));
+        // A range is an array even when it spans one element; the count cannot express that.
+        if (explicitRange) {
+            return Collections.singletonList(new DefaultArrayInfo(0, getNumberOfElements() - 1, 0, true));
         }
         return Collections.emptyList();
     }
@@ -198,12 +239,11 @@ public class DirectAdsTag implements AdsTag {
         if (this == o) {
             return true;
         }
-        if (!(o instanceof DirectAdsTag)) {
-            return false;
+        if (o instanceof DirectAdsTag that) {
+            return indexGroup == that.indexGroup &&
+                indexOffset == that.indexOffset;
         }
-        DirectAdsTag that = (DirectAdsTag) o;
-        return indexGroup == that.indexGroup &&
-            indexOffset == that.indexOffset;
+        return false;
     }
 
     @Override
